[gd_scene load_steps=6 format=3 uid="uid://8q2va33ba846"]

[ext_resource type="PackedScene" uid="uid://didft68u16tdc" path="res://Level/School/school.tscn" id="1_2w1kt"]
[ext_resource type="Script" uid="uid://dkjv0vfvg8q34" path="res://Main/main.gd" id="1_k3v36"]
[ext_resource type="PackedScene" uid="uid://cr2twmc0uvpup" path="res://Characters/Player/player.tscn" id="2_qvhan"]
[ext_resource type="PackedScene" uid="uid://b8ks3ebgvhqj7" path="res://Characters/NPCS/ucenik1/ucenik_1.tscn" id="3_qvhan"]
[ext_resource type="PackedScene" uid="uid://b4r5jfa2it0lp" path="res://Battle/battle.tscn" id="4_eunhr"]

[node name="Main" type="Node2D"]
script = ExtResource("1_k3v36")

[node name="School" parent="." instance=ExtResource("1_2w1kt")]
scale = Vector2(6.025, 6.025)

[node name="Ucenik1" parent="." groups=["ucenici"] instance=ExtResource("3_qvhan")]
position = Vector2(713, 48)
rotation = -1.55334

[node name="Ucenik2" parent="." groups=["ucenici"] instance=ExtResource("3_qvhan")]
position = Vector2(809, 384)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = -905.0
offset_top = -471.0
offset_right = -865.0
offset_bottom = -431.0
scale = Vector2(1000, 1000)
color = Color(0, 0, 0, 0.517647)

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Player" parent="CanvasLayer2" instance=ExtResource("2_qvhan")]
position = Vector2(4, 26)

[node name="Battle" parent="CanvasLayer2/Player" instance=ExtResource("4_eunhr")]
visible = false
z_as_relative = false
offset_left = -577.0
offset_top = -348.0
offset_right = -577.0
offset_bottom = -348.0

[connection signal="half_monster_hp_left" from="CanvasLayer2/Player/Battle" to="." method="_on_battle_half_monster_hp_left"]
[connection signal="player_lost" from="CanvasLayer2/Player/Battle" to="." method="_on_battle_player_lost"]
[connection signal="player_won" from="CanvasLayer2/Player/Battle" to="." method="_on_battle_player_won"]
